magento-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
