nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento-nginx

  template:
    metadata:
      labels:
        app: magento-nginx

    spec:
      containers:
      - name: nginx
        image: nginx:1.27

        ports:
        - containerPort: 80

        volumeMounts:
        - name: magento-storage
          mountPath: /var/www/html

        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf

      volumes:
      - name: magento-storage
        persistentVolumeClaim:
          claimName: magento-shared-pvc

      - name: nginx-config
        configMap:
          name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: magento

spec:
  selector:
    app: magento-nginx

  ports:
  - port: 80
    targetPort: 80
