opensearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: magento
  labels:
    app: magento-opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento-opensearch
  template:
    metadata:
      labels:
        app: magento-opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2.19.1

        ports:
        - containerPort: 9200

---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: magento
spec:
  selector:
    app: magento-opensearch
  ports:
  - port: 9200
    targetPort: 9200
