redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: magento
  labels:
    app: magento-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento-redis
  template:
    metadata:
      labels:
        app: magento-redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: magento
spec:
  selector:
    app: magento-redis
  ports:
  - port: 6379
    targetPort: 6379
