varnish.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
  namespace: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento-varnish
  template:
    metadata:
      labels:
        app: magento-varnish
    spec:
      containers:
      - name: varnish
        image: varnish:7

        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: varnish
  namespace: magento
spec:
  selector:
    app: magento-varnish

  ports:
  - port: 80
    targetPort: 80
