magento-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ingress
  namespace: magento
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"

spec:
  ingressClassName: nginx
  rules:
  - host: magento.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
